Adjust height of display elements to fix minor layout issue

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
-  height: 6rem;
   margin: 6px;
   padding: 3px;
   background-color: rgb(118, 172, 136);
@@ -112,7 +111,7 @@ textarea {
 
 .display-input {
   font-size: 30px;
-  height: 48px;
+  height: 42px;
   margin: 3px;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
@@ -120,7 +119,7 @@ textarea {
 
 .display-result {
   font-size: 20px;
-  height: 36px;
+  height: 32px;
   margin: 3px;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
